# biblioteca-guerrilla

./: .gitignore  .pre-commit-config.yaml  .prospector.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  Pipfile  README.md  README.rst  babel.cfg  notas.txt  requeriments.txt  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  start_test_server.sh  zanata.xml
.github/: ISSUE_TEMPLATE.md
app/: app.py  calibre_connector.py  dbprovider.py  freeze.py  main.py  settings.py  utils_libro.py
app/conector/: calibre.py  calibre_connector.py  dbprovider.py
app/conector/calibre/: calibre.py
app/conector/calibre/tests/: calibre_tests_helper.py  tests.py
app/static/css/: custom.css
app/templates/: aside.html  base.html  footer.html  header.html  index.html  libro.html  libro_en_listado.html  listado.html  listado_de_entradas.html  listado_de_libros.html  sidebar.html
app/tests/: calibre_connector_test.py
app/tests/data/biblioteca_calibre/: metadata.db  metadata_db_prefs_backup.json
app/tests/data/biblioteca_calibre/Aaron Swartz/Manifiesto por la Guerrilla del Acceso Abierto (3)/: metadata.opf
app/tests/data/biblioteca_calibre/Dmytri Kleiner/Las hackers no pueden solucionar la vigilancia (1)/: Las hackers no pueden solucionar la vigila - Dmytri Kleiner.epub  metadata.opf
app/tests/data/biblioteca_calibre/En Defensa del Software Libre/Licencia de Produccion de Pares (Version legible por humanas) (2)/: metadata.opf
app/translations/en/LC_MESSAGES/: messages.po
app/utils/: utils_libro.py  utils_url.py
biblioteca_guerrilla/app/: cli.py  freeze.py  main.py  settings.py
biblioteca_guerrilla/app/conector/calibre/tests/: calibre_tests_helper.py  tests.py
biblioteca_guerrilla/app/connector/: dbprovider.py
biblioteca_guerrilla/app/connector/calibre/: calibre.py
biblioteca_guerrilla/app/static/css/: aside.css  custom.css
biblioteca_guerrilla/app/static/js/: bulma.js
biblioteca_guerrilla/app/templates/: base.html  book.html  central.html  footer.html  header.html  index.html  libro.html  list_of_books.html  list_of_entries.html  listado_de_entradas.html  listado_de_libros.html  sidebar.html
biblioteca_guerrilla/app/tests/: calibre_connector_test.py
biblioteca_guerrilla/app/tests/data/biblioteca_calibre/: metadata.db  metadata_db_prefs_backup.json
biblioteca_guerrilla/app/translations/: es_AR.po
biblioteca_guerrilla/app/translations/es_AR/LC_MESSAGES/: messages.po
biblioteca_guerrilla/app/utils/: books.py  urls.py  utils_url.py
utils/: actualizar_idiomas.sh  compilar_idiomas.sh  extraer_mensajes.sh
