# See: https://setuptools.readthedocs.io/en/latest/setuptools.html#metadata
[metadata]
name=biblioteca_guerrilla
version=0.1.0
description=Simple static website generator to share books 🕮
author=KaZe
author_email=kaze@rlab.be
url=https://github.com/elkaze/biblioteca_guerrilla
download_url=https://github.com/elkaze/biblioteca_guerrilla
maintainer       = KaZe
maintainer_email = kaze@rlab.be
keywords         = books, sharing, calibre, static-website-generator
license          = GPL-3
platforms        = Linux, Darwin, Windows
project_urls     =
    Docs = https://github.com/elKaZe/biblioteca-guerrilla/blob/master/README.md
    Bugs = https://github.com/elKaZe/biblioteca-guerrilla/issues
#    C.I. = https://travis-ci.org/example/example

license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Education
    Intended Audience :: End Users/Desktop
    Natural Language :: English
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Communications :: File Sharing
    Topic :: Education
    Topic :: Internet :: WWW/HTTP
    Topic :: Utilities


[options]
zip_safe = True
include_package_data = True
python_requires  = >=3.6
tests_require    = isort ; prospector ; pre-commit ; pre-commit-hooks
install_requires = pip; pyyaml; markupsafe; flask; babel; flask-babel; pytz; jinja2; werkzeug; itsdangerous; frozen-flask; click
setup_requires   = pip
packages         = find:

[bdist_wheel]
universal = 1
python-tag = py36

[install_lib]
compile = 0
optimize = 2

[bdist_egg]
exclude-source-files = true

# [options.package_data]
# * = *.pxd, *.pyx, *.json, *.txt

# [options.exclude_package_data]
# ;* = *.c, *.so, *.js

[options.entry_points]
console_scripts =
     biblioteca-guerrilla = biblioteca_guerrilla.app.cli:live

# [options.packages.find]
# where   = .
# include = *.py, *.pyw
# exclude = *.c, *.so, *.js, *.tests, *.tests.*, tests.*, tests
